[tool.poetry]
name = "servo-appdynamics"
version = "0.7.5"
description = "AppDynamics connector for Opsani Servo"
authors = ["Daniel Howell <daniel@opsani.com>"]
license = "Apache-2.0"
homepage = "https://github.com/opsani/servo-appdynamics"
repository = "https://github.com/opsani/servo-appdynamics"

[tool.poetry.dependencies]
python = "^3.8"
servox = "^0.10.7"
# note: keep servox version equal to the one in Dockerfile

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.18.1"
respx = "^0.16.3"
freezegun = "^1.1.0"

[tool.poetry.plugins."servo.connectors"]
"servo-appdynamics" = "servo_appdynamics:AppdynamicsConnector"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
